[package]
name = "rustedbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.14"
rusqlite = "0.28.0"
tokio = { version = "1.25.0", features = [ "rt", "rt-multi-thread" ] }
twitch-irc = "5.0.0"
