[package]
name = "rustedbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.14"
rusqlite = "0.28.0"
tokio = { version = "1.25.0", features = [ "rt", "rt-multi-thread" ] }
twitch-irc = "5.0.0"
rand = "0.8.5"
scryfall = "0.20.0"
log = "0.4.27"
fern = { version = "0.7.1", features = ["colored"] }
chrono = "0.4.40"
statrs = "0.18.0"
strum = "0.25"
strum_macros = "0.25"
regex = "1.11.1"
tempfile = "3.21.0"
